# tflite-auto-delegation

./: CMakeLists.txt  oss-pkg-info.yaml
auto_delegation/: CMakeLists.txt  oss-pkg-info.yaml
auto_delegation/src/: AccelerationPolicyManager.cc  AutoDelegateSelector.cc  util.cc
auto_delegation/src/customOp/: posenet_decoder.cc  posenet_decoder_op.cc  transpose_conv_bias.cpp
auto_delegation/src/tools/: GraphTester.cc  Logger.cc  Utils.cc
files/: auto-delegation.pc
include/: AccelerationPolicyManager.h  AutoDelegateSelector.h  util.h
include/tools/: GraphTester.h  Logger.h  Utils.h
test/: CMakeLists.txt
test/src/: AccelerationPolicyManager_test.cc  AutoDelegateSelector_test.cc  GraphTester_test.cc
test/src/customOp/: posenet_decoder.cc  posenet_decoder_op.cc  transpose_conv_bias.cc
tests/: CMakeLists.txt
tests/include/: GraphTester.h
tests/src/: AccelerationPolicyManager_test.cc  AutoDelegateSelector_test.cc  GraphTester.cc  GraphTester_test.cc
